Fixed markdown typo.

--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -71,7 +71,7 @@ We will be using the Redis rate-limiting project for this demonstration.
 
 ## Step 4. Create a new CircleCI configuration file
 
-CircleCI believes in _configuration as code_. As a result, the entire delivery process from build to deploy is orchestrated through a single file called `config.yml`. The `config.yml` file is located in a folder called `.circleci`` at the top of your project. CircleCI uses the YAML syntax for config.
+CircleCI believes in _configuration as code_. As a result, the entire delivery process from build to deploy is orchestrated through a single file called `config.yml`. The `config.yml` file is located in a folder called `.circleci` at the top of your project. CircleCI uses the YAML syntax for config.
 
 ![Selecting a config file](images/circleci-config.png)
 
