Fixed character casing to match screenshot.

--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -79,7 +79,7 @@ As we haven’t yet created a `config.yml` file, let’s choose the “Fast” o
 
 ![Selecting the fast option](images/circleci-config2.png)
 
-Once you click “Set Up project” it will ask you to select sample configs as shown in the following screenshot:
+Once you click “Set Up Project” it will ask you to select sample configs as shown in the following screenshot:
 
 ![Sample configs](images/circleci-demoapp.png)
 
