--- a/docs/create/azurefunctions/index-azurefunctions.mdx
+++ b/docs/create/azurefunctions/index-azurefunctions.mdx
@@ -7,7 +7,7 @@ authors: [ajeet]
 ---
 
 
-![alt_text](images/preview_azurefunction.png "image_tooltip")
+![alt_text](images/preview_azurefunction.png)
 
 [Azure Functions](https://azure.microsoft.com/en-in/services/functions/) is an event-based, serverless compute platform offered by [Microsoft](https://azure.microsoft.com/en-in/blog/microsoft-named-a-leader-in-forrester-wave-functionasaservice-platforms/) to accelerate and simplify serverless application development. It allows developers to write less code, build and debug locally without additional setup, and deploy and operate at scale in the cloud. 
 
@@ -56,7 +56,7 @@ Create an Azure account with an active subscription by clicking this link: [Crea
 
 
 
-![Acount Dashboard](images/image2.png "image_tooltip")
+![Acount Dashboard](images/image2.png)
 
 
 ### Step 2.  Set up “Azure Cache for Redis”
@@ -65,28 +65,28 @@ Type "Azure Cache for Redis" in the search section and select the service:
 
 
 
-![Azure Cache for Redis Service](images/image3.png "image_tooltip")
+![Azure Cache for Redis Service](images/image3.png)
 
 Under "New Redis Cache" window, create a new resource group, select your preferred location and cache type:
 
 
-![Creating a new Redis Instance](images/image4.png "image_tooltip")
+![Creating a new Redis Instance](images/image4.png)
 
 Once you are done with the entries, click "Review + Create" button.
 
 
-![alt_text](images/image5.png "image_tooltip")
+![alt_text](images/image5.png)
 
 
 Wait for few seconds to let deployment process to complete.
 
-![Deploying your Redis Instance](images/image6.png "image_tooltip")
+![Deploying your Redis Instance](images/image6.png)
 
 
 Once the deployment is complete, you will be provided with the deployment name, subscription details and resource group.
 
 
-![Redis Instance up and running](images/image7.png "image_tooltip")
+![Redis Instance up and running](images/image7.png)
 
 
 ### Step 3. Configure Keys for Redis Cache
@@ -97,7 +97,7 @@ Click "Overview" option in the left sidebar to see the Primary key and save it f
 
 
 
-![Managing keys](images/keys.png "image_tooltip")
+![Managing keys](images/keys.png)
 
 
 ### Step 4. Verify if Redis database is accessible
@@ -130,7 +130,7 @@ Visual Studio Code is a lightweight but powerful source code editor that runs on
 
 
 
-![Visual Studio Code download](images/image8.png "image_tooltip")
+![Visual Studio Code download](images/image8.png)
 
 
 
@@ -152,7 +152,7 @@ Use the Azure Functions extension to quickly create, debug, manage, and deploy s
 
 
 
-![The Azure Functions extension for Visual Studio Code](images/image10.png "image_tooltip")
+![The Azure Functions extension for Visual Studio Code](images/image10.png)
 
 
 
@@ -163,7 +163,7 @@ Use the Azure Functions extension to quickly create, debug, manage, and deploy s
 
 
 
-![Configuring Azure in Visual Studio Code](images/image13.png "image_tooltip")
+![Configuring Azure in Visual Studio Code](images/image13.png)
 
 
 ### Step 10. Clone the project repository
@@ -208,7 +208,7 @@ This will open VS Code. The function will automatically load into the plugin.
 
 
 
-![Project loaded into Visual Studio Code](images/image14.png "image_tooltip")
+![Project loaded into Visual Studio Code](images/image14.png)
 
 
 ### Step 11. Trigger the function
@@ -218,7 +218,7 @@ Press F5 to automatically execute the function.
 
 
 
-![Executing the function](images/image15.png "image_tooltip")
+![Executing the function](images/image15.png)
 
 
 If you want to manually select the repository, choose .NET framework, etc., and then click “Create new project.”
@@ -226,7 +226,7 @@ If you want to manually select the repository, choose .NET framework, etc., and 
 
 
 
-![Creating a new project](images/image16.png "image_tooltip")
+![Creating a new project](images/image16.png)
 
 
 You will find the following output under VS Code screen:
@@ -274,7 +274,7 @@ For detailed output, run func with --verbose flag.
 
 
 
-![Output in the browser from running the application locally](images/image17.png "image_tooltip")
+![Output in the browser from running the application locally](images/image17.png)
 
 
 ### Step 13. Seed the Redis database
@@ -326,7 +326,7 @@ If you connect to the Redis database and run the `MONITOR` command, you should s
 
 
 
-![Redis Insight](images/image18.png "image_tooltip")
+![Redis Insight](images/image18.png)
 
 
 
