--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -33,7 +33,7 @@ If you are using Heroku for the first time, create your new Heroku account [thro
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![alt_text](images/image2.png)
 
 
 
@@ -76,7 +76,7 @@ For this demonstration, we will be using a Simple Rate Limiting application usin
 
 
 
-![alt_text](images/image3.png "image_tooltip")
+![alt_text](images/image3.png)
 
 
 
@@ -86,7 +86,7 @@ Go to the Heroku dashboard, click "Settings" and set REDIS_HOST, REDIS_PORT and 
 
 
 
-![alt_text](images/image4.png "image_tooltip")
+![alt_text](images/image4.png)
 
 
 You now have a functioning Git repository that contains a simple application as well as a package.json file, which is used by Node’s dependency manager.
@@ -145,7 +145,7 @@ Open [https://powerful-fortress-83061.herokuapp.com/](https://powerful-fortress-
 
 
 
-![alt_text](images/image5.png "image_tooltip")
+![alt_text](images/image5.png)
 
 ## How it works
 
