--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -15,7 +15,7 @@ Vercel is the preferred platform to host [Next.js-based web applications](https:
 Vercel integrates well with popular tools, such as [GitHub](https://vercel.com/docs/concepts/git/vercel-for-github), [GitLab](https://vercel.com/docs/concepts/git/vercel-for-gitlab), [Lighthouse](https://vercel.com/integrations/lighthouse), [Doppler](https://vercel.com/integrations/doppler), and [Divjoy](https://divjoy.com/). NodeJS, Go, Python, and Ruby are the leading [official runtimes supported by Vercel](https://vercel.com/docs/runtimes).
 
 
-![vercel](images/vercel_redis.png "image_tooltip")
+![vercel](images/vercel_redis.png)
 
 
 ### Features of Vercel
@@ -58,7 +58,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 
 
-![alt_text](images/details_database.png "image_tooltip")
+![alt_text](images/details_database.png)
 
 
 ### Step 2. Install Vercel CLI 
@@ -204,11 +204,11 @@ Vercel CLI 23.1.2
 
 By now, you will be able to login to Chat app and start chatting.
 
-![alt_text](images/vercel13.png "image_tooltip")
+![alt_text](images/vercel13.png)
 
 The chat server works as a basic REST API which involves keeping the session and handling the user state in the chat rooms (besides the WebSocket/real-time part). When a WebSocket/real-time server is instantiated, which listens for the next events:
 
-![alt_text](images/vercel3.png "image_tooltip")
+![alt_text](images/vercel3.png)
 
 If you want to know how the chat app works internally, [refer to this detailed blog tutorial](/howtos/chatapp#how-it-works)
 
