--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -66,7 +66,7 @@ Select "Connect to a Redis database"
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![alt_text](images/image2.png)
 
 
 ## Step 4: Store Redis user sample datasets
@@ -129,7 +129,7 @@ Choose the offline analysis approach if you have a RDB Backup file that you want
 
 
 
-![alt_text](images/image4.png "image_tooltip")
+![alt_text](images/image4.png)
 
 
 Enter the right location of the RDB backup file as shown below:
@@ -138,14 +138,14 @@ Enter the right location of the RDB backup file as shown below:
 
 
 
-![alt_text](images/image5.png "image_tooltip")
+![alt_text](images/image5.png)
 
 
 Click “Proceed”.
 
 
 
-![alt_text](images/image6.png "image_tooltip")
+![alt_text](images/image6.png)
 
 
 :::important
@@ -164,7 +164,7 @@ Click “Keyspace” and you will see the total memory consumed by each of the t
 
 
 
-![alt_text](images/image7.png "image_tooltip")
+![alt_text](images/image7.png)
 
 
 You can click on each of these keys patterns(as shown above) and check the memory usage.
@@ -232,7 +232,7 @@ key:*
 
 
 
-![alt_text](images/image11.png "image_tooltip")
+![alt_text](images/image11.png)
 
 
 ## Memory Analyzer
@@ -245,18 +245,18 @@ Considering 1 million keys only using the SET command, you can view the memory a
 
 
 
-![alt_text](images/image13.png "image_tooltip")
+![alt_text](images/image13.png)
 
 
 
 The advanced filters allow you to choose data type, encoding, memory, group by data types, encoding, aggregate etc.
 
 
-![alt_text](images/image14.png "image_tooltip")
+![alt_text](images/image14.png)
 
 You can check memory usage by key:
 
-![alt_text](images/image15.png "image_tooltip")
+![alt_text](images/image15.png)
 
 
 
