--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -35,7 +35,7 @@ Visit [https://developer.redis.com/create/rediscloud](https://developer.redis.co
 
 
 
-![alt_text](images/image1.png "image_tooltip")
+![alt_text](images/image1.png)
 
 
 ## Step 2: Download RedisInsight
@@ -240,14 +240,14 @@ OK
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![alt_text](images/image2.png)
 
 
 ## Step 6: Running RedisTimeSeries specific queries**
 
 
 
-![alt_text](images/image3.png "image_tooltip")
+![alt_text](images/image3.png)
 
 
 Please note that In RedisTimeSeries, only [TS.RANGE ](https://oss.redis.com/redistimeseries/commands/#tsrangetsrevrange)and [TS.MRANGE](https://oss.redis.com/redistimeseries/commands/#tsmrangetsmrevrange) are supported as of the current release. In the next release, TS.REVRANGE and TS.MREVRANGE will be supported too.
@@ -256,7 +256,7 @@ Please note that In RedisTimeSeries, only [TS.RANGE ](https://oss.redis.com/redi
 
 
 
-![alt_text](images/image4.png "image_tooltip")
+![alt_text](images/image4.png)
 
 
 ## Step 7. Initiate the Profiler
@@ -267,7 +267,7 @@ Click “Start Profiler” while sensor data is continuously being pushed to Red
 
 
 
-![alt_text](images/image5.png "image_tooltip")
+![alt_text](images/image5.png)
 
 
 Let the profiler tool run for next 1-2 minutes. 
@@ -276,7 +276,7 @@ Let the profiler tool run for next 1-2 minutes.
 
 
 
-![alt_text](images/image6.png "image_tooltip")
+![alt_text](images/image6.png)
 
 
 Stop the profiler to see the results as shown below:
@@ -284,7 +284,7 @@ Stop the profiler to see the results as shown below:
 
 
 
-![alt_text](images/image7.png "image_tooltip")
+![alt_text](images/image7.png)
 
 
 Hence, the profiler provides the below statistical details:
