--- a/docs/explore/redisinsight/browser/index-browser.mdx
+++ b/docs/explore/redisinsight/browser/index-browser.mdx
@@ -44,7 +44,7 @@ Enter the requested details, including Name, Host (endpoint), Port, and Password
 
 
 
-![alt_text](images/image1.png "image_tooltip")
+![alt_text](images/image1.png)
 
 
 ## Step 4: Importing keys
@@ -103,14 +103,14 @@ Click on “Scan More” to scan all 6k keys
 
 
 
-![alt_text](images/image3.png "image_tooltip")
+![alt_text](images/image3.png)
 
 
 You can get a real-time view of the data in your Redis database as shown below:
 
 
 
-![alt_text](images/image4.png "image_tooltip")
+![alt_text](images/image4.png)
  
 
 Select any key in the key database and the results gets displayed in the right hand side that includes Fields and values.
@@ -119,7 +119,7 @@ Select any key in the key database and the results gets displayed in the right h
 
 
 
-![alt_text](images/image5.png "image_tooltip")
+![alt_text](images/image5.png)
 
 
 ## Step 6. Adding a new key
@@ -128,7 +128,7 @@ Select any key in the key database and the results gets displayed in the right h
 
 
 
-![alt_text](images/image6.png "image_tooltip")
+![alt_text](images/image6.png)
 
 
 Enter key name, field and value.
@@ -137,7 +137,7 @@ Enter key name, field and value.
 
 
 
-![alt_text](images/image7.png "image_tooltip")
+![alt_text](images/image7.png)
 
 
 ## Step 7. Searching the hash key
@@ -148,7 +148,7 @@ You can search the key by “user:9999” and you will see the result.
 
 
 
-![alt_text](images/image8.png "image_tooltip")
+![alt_text](images/image8.png)
 
 
 Let us add fields for user:9999 as shown below:
@@ -165,20 +165,20 @@ You can even search by adding “*” and typing the first few letters.
 
 
 
-![alt_text](images/image10.png "image_tooltip")
+![alt_text](images/image10.png)
 
 
 ## Step 8: Filter keys by Data Type
 
 
 
-![alt_text](images/image12.png "image_tooltip")
+![alt_text](images/image12.png)
 
 ## Step 9: Setting up the Expiry value
 
 Let us set it to 2 seconds and you won’t be able to search for the same key as it gets expired.
 
-![alt_text](images/image13.png "image_tooltip")
+![alt_text](images/image13.png)
 
 ## Step 10: Using CLI
 
@@ -195,7 +195,7 @@ RedisInsight CLI lets you run commands against a redis server. You don’t need 
 
 
 
-![alt_text](images/image14.png "image_tooltip")
+![alt_text](images/image14.png)
 
 
 
