Removed generic image tooltips.

--- a/docs/explore/redisinsight/redisgears/index-redisgears.mdx
+++ b/docs/explore/redisinsight/redisgears/index-redisgears.mdx
@@ -88,7 +88,7 @@ Choose “RedisGears” on the left menu.
 
 
 
-![alt_text](images/image1.png "image_tooltip")
+![alt_text](images/image1.png)
 
 
 ## Step 7. Add the below script:
@@ -103,14 +103,14 @@ GB('KeysOnlyReader').map(lambda x: execute('hget', x, 'genres')).flatmap(lambda 
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![alt_text](images/image2.png)
 
 
 
 
 
 
-![alt_text](images/image3.png "image_tooltip")
+![alt_text](images/image3.png)
 
 ## Additional References
 
