--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -125,7 +125,7 @@ Let us try to visualise using the RedisInsight browser tool. Make sure ‘Stream
 
 
 
-![alt_text](images/image16.png "image_tooltip")
+![alt_text](images/image16.png)
 
 
 To see the processing side of the stream select ‘Stream Data”. You will see 105 records under the streaming data.
@@ -134,7 +134,7 @@ To see the processing side of the stream select ‘Stream Data”. You will see 
 
 
 
-![alt_text](images/image17.png "image_tooltip")
+![alt_text](images/image17.png)
 
 
 Click on “Consumer Groups” to see application_1 as promising consumer.
@@ -143,7 +143,7 @@ Click on “Consumer Groups” to see application_1 as promising consumer.
 
 
 
-![alt_text](images/image18.png "image_tooltip")
+![alt_text](images/image18.png)
 
 
 RedisInsight also provide you to select fields as shown under “View Columns” section.
@@ -152,7 +152,7 @@ RedisInsight also provide you to select fields as shown under “View Columns”
 
 
 
-![alt_text](images/image19.png "image_tooltip")
+![alt_text](images/image19.png)
 
 
 ## Additional Links
