--- a/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
+++ b/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
@@ -32,7 +32,7 @@ It is possible to install RedisInsight using Helm chart. A full-featured desktop
 
 Install Docker Desktop for Mac and enable Kubernetes as shown below:
 
-![alt_text](images/image1.png "image_tooltip")
+![alt_text](images/image1.png)
 
 ### Step 2. Install Helm on your Mac system 
 
