--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -110,7 +110,7 @@ Add the local Redis database endpoint and port.
 
 Click on the "Key" icon on the left sidebar to open up the browser tool.
 
-![alt_text](images/image_browser.png "image_tooltip")
+![alt_text](images/image_browser.png)
 
 
 ### Step 6: Importing keys
@@ -159,7 +159,7 @@ Open up the CLI terminal and run the following command:
 Refresh the keys view by clicking as shown below:
 
 
-![alt_text](images/image_browser1.png "image_tooltip")
+![alt_text](images/image_browser1.png)
 
 
 You can get a real-time view of the data in your Redis database as shown below:
@@ -177,7 +177,7 @@ Select any key in the keys view and the key's value gets displayed in the right 
 
 
 
-![alt_text](images/image_browser31.png "image_tooltip")
+![alt_text](images/image_browser31.png)
 
 
 Enter key name, field and value.
@@ -191,7 +191,7 @@ Enter key name, field and value.
 RedisInsight CLI lets you run commands against a Redis server. You don’t need to remember the syntax - the integrated help shows you all the arguments and validates your command as you type.
 
 
-![alt_text](images/image_browser4.png "image_tooltip")
+![alt_text](images/image_browser4.png)
 
 
 
