--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -205,7 +205,7 @@ $ python3 dataloader.py
 
 
 
-![alt_text](images/image1.png "image_tooltip")
+![alt_text](images/image1.png)
 
 
 ## Step 7 . Displaying the JSON view
@@ -214,7 +214,7 @@ $ python3 dataloader.py
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![alt_text](images/image2.png)
 
 
 ## Step 8.  Displaying the tabular view
@@ -223,7 +223,7 @@ $ python3 dataloader.py
 
 
 
-![alt_text](images/image3.png "image_tooltip")
+![alt_text](images/image3.png)
 
 
 
