Removed generic image tooltips.

--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -53,7 +53,7 @@ Select "Connect to a Redis database".
 Enter the requested details, including Name, Host (endpoint), Port, and Password.  Then click “ADD REDIS DATABASE”.
 
 
-![alt_text](images/database.png "image_tooltip")
+![alt_text](images/database.png)
 
 
 ### Step 3. Movie Sample Database
