--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -88,7 +88,7 @@ Once added, you will see the database name listed as shown below:
 
 Click on the "Key" icon on the left sidebar to open up the browser tool.
 
-![redis database with no keys](images/redisinsight-no-keys.png "image_tooltip")
+![redis database with no keys](images/redisinsight-no-keys.png)
 
 
 ### Step 5. Overview of User database keys
@@ -142,7 +142,7 @@ You will need a hostname, port and password to run this for a cloud database.
 Refresh the keys view by clicking as shown below:
 
 
-![listing the keys](images/redisinsight-keys-added.png "image_tooltip")
+![listing the keys](images/redisinsight-keys-added.png)
 
 
 You can get a real-time view of the data in your Redis database as shown below:
