--- a/docs/howtos/socialnetwork/index-socialnetwork.mdx
+++ b/docs/howtos/socialnetwork/index-socialnetwork.mdx
@@ -71,7 +71,7 @@ An index will then be used on this hash data structure, to efficiently search fo
 
 
 
-![alt_text](images/searchindex.png "image_tooltip")
+![alt_text](images/searchindex.png)
 
 
 Use the `help @hash` command (or refer to the [documentation](https://redis.io/commands#hash)) to get a list of commands that can be used to manipulate hashes. To get help for a single command, like `HSET` let’s type `help HSET`:
