Removed generic image tooltips.

--- a/docs/howtos/redistimeseries/using-prometheus/index-usingprometheus.mdx
+++ b/docs/howtos/redistimeseries/using-prometheus/index-usingprometheus.mdx
@@ -153,7 +153,7 @@ In the left sidebar, you will see the “Configuration” option. Select “Data
 
 
 
-![alt_text](images/image1.png "image_tooltip")
+![alt_text](images/image1.png)
 
 
 Click “Save and Test”.
@@ -164,7 +164,7 @@ Click on “Import” for all the Prometheus dashboards.
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![alt_text](images/image2.png)
 
 
 ### Step 7. Adding Redis Datasource
@@ -175,14 +175,14 @@ Again, click on “Data Sources” and add Redis.
 
 
 
-![alt_text](images/image_3.png "image_tooltip")
+![alt_text](images/image_3.png)
 
 
 Click "Import".
 
 
 
-![alt_text](images/image_4.png "image_tooltip")
+![alt_text](images/image_4.png)
 
 
 
@@ -212,7 +212,7 @@ Go to “Add Panel” on the top right corner of the Grafana dashboard and start
 
 
 
-![alt_text](images/image_7.png "image_tooltip")
+![alt_text](images/image_7.png)
 
 
 ### Step 9. Accessing Prometheus Dashboard
@@ -221,7 +221,7 @@ Open up [https://HOSTIP:9090](https://HOSTIP:9090) to access Prometheus dashboar
 
 
 
-![alt_text](images/image_8.png "image_tooltip")
+![alt_text](images/image_8.png)
 
 
 ### Further References:
