--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -285,24 +285,24 @@ Click on the pipeline you created:
 
 
 
-![Selecting your pipeline](images/image16.png "image_tooltip")
+![Selecting your pipeline](images/image16.png)
 
 
 Click the "Build Now" icon on the left side menu.
 
 
-![Building your pipeline](images/image17.png "image_tooltip")
+![Building your pipeline](images/image17.png)
 
 Click the **Status** icon on the left side menu in order to see the results of all the output from each of the stages of your pipeline.
 
 
 
-![Pipeline status](images/status.png "image_tooltip")
+![Pipeline status](images/status.png)
 
 
 Hover over the **build** stage and click the **Logs** button of the most recent build in order to see the Python script’s output.
 
-![Viewing the Python logs](images/image18.png "image_tooltip")
+![Viewing the Python logs](images/image18.png)
 
 
 
@@ -310,14 +310,14 @@ Sample output: you should see a verbose response from Redis’s REST service in 
 
 There’s also a “Git” output log, in case you need to debug something at that level. Any time you update the branch in the remote git repository, you should see evidence in that log that the latest changes have successfully checked out into the local Jenkins git repository.
 
-![Viewing the git log](images/image19.png "image_tooltip")
+![Viewing the git log](images/image19.png)
 
 
 
 
 Open your Redis Enterprise Secure Management UI at `https://servername:8443` and click on the **databases** menu item to verify that your database was created with the name, port, and size specified in the `deployment-configuration-file.json` file.
 
-![Verifying database creation](images/image20.png "image_tooltip")
+![Verifying database creation](images/image20.png)
 
 
 
