--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -153,7 +153,7 @@ In the left sidebar, you will see the “Configuration” option. Select “Data
 
 
 
-![Adding the Prometheus data source](images/image1.png "image_tooltip")
+![Adding the Prometheus data source](images/image1.png)
 
 
 Click “Save and Test”.
@@ -164,7 +164,7 @@ Click on “Import” for all the Prometheus dashboards.
 
 
 
-![Importing the Prometheus data source](images/image2.png "image_tooltip")
+![Importing the Prometheus data source](images/image2.png)
 
 
 ### Step 7. Adding Redis Data Source
@@ -175,14 +175,14 @@ Again, click on “Data Sources” and add Redis.
 
 
 
-![Adding the Redis data source](images/image_3.png "image_tooltip")
+![Adding the Redis data source](images/image_3.png)
 
 
 Click "Import".
 
 
 
-![Importing the Redis data source](images/image_4.png "image_tooltip")
+![Importing the Redis data source](images/image_4.png)
 
 
 
@@ -212,7 +212,7 @@ Go to “Add Panel” on the top right corner of the Grafana dashboard and start
 
 
 
-![alt_text](images/image_7.png "image_tooltip")
+![alt_text](images/image_7.png)
 
 
 ### Step 9. Accessing Prometheus Dashboard
@@ -221,7 +221,7 @@ Open up `https://HOSTIP:9090` to access the Prometheus dashboard for the sensor 
 
 
 
-![Accessing the Prometheus dashboard](images/image_8.png "image_tooltip")
+![Accessing the Prometheus dashboard](images/image_8.png)
 
 
 ### Further References:
