Removed generic image tooltips.

--- a/docs/howtos/redistimeseries/using-go/index-usinggo.mdx
+++ b/docs/howtos/redistimeseries/using-go/index-usinggo.mdx
@@ -25,11 +25,11 @@ Create your free [Redis Enterprise Cloud account](https://redis.com/try-free/). 
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![alt_text](images/image2.png)
 
 
 
-![alt_text](images/image3.png "image_tooltip")
+![alt_text](images/image3.png)
 
 
 
@@ -40,7 +40,7 @@ Next, you will have to create a Redis Enterprise Cloud subscription. In the Redi
 
 
 
-![alt_text](images/image4.png "image_tooltip")
+![alt_text](images/image4.png)
 
 
 
@@ -51,7 +51,7 @@ Next, you will have to create a Redis Enterprise Cloud subscription. In the Redi
 
 
 
-![alt_text](images/image5.png "image_tooltip")
+![alt_text](images/image5.png)
 
 
 
@@ -63,7 +63,7 @@ For the cloud provider, select your preferred cloud (for demo purpose)
 
 
 
-![alt_text](images/image6.png "image_tooltip")
+![alt_text](images/image6.png)
 
 
 
@@ -75,7 +75,7 @@ Finally, click on the "Create Subscription" button.
 
 
 
-![alt_text](images/image7.png "image_tooltip")
+![alt_text](images/image7.png)
 
 
 You can now verify the subscription as shown below:
@@ -84,7 +84,7 @@ You can now verify the subscription as shown below:
 
 
 
-![alt_text](images/image8.png "image_tooltip")
+![alt_text](images/image8.png)
 
 
 
@@ -96,7 +96,7 @@ Click "Create Database". Enter database name and your preferred module.
 
 
 
-![alt_text](images/image9.png "image_tooltip")
+![alt_text](images/image9.png)
 
 
 
